# audioplayer-rs

./: Cargo.toml  Dioxus.toml
assets/: main.css
src/: main.rs
src/components/: audio_player.rs  handle_buttons.rs  load_directory.rs  load_image.rs  mod.rs  player_buttons.rs  track_list.rs
src/file_utils/: load_image.rs  mod.rs
src/handlers/: mod.rs
src/hooks/: mod.rs
src/player/: mod.rs  player_context.rs  track.rs
src/utilities/: mod.rs
