[package]
name = "audioplayer"
version = "0.1.0"
authors = ["Arseniy Finevich <clumserinri537@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main" }
rfd = "0.17.2"
base64 = "0.22.1"
rodio = { version = "0.18.0", features = ["symphonia-all"] }
tokio = "1.49.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
